--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
+    "axios": "^1.13.2",
     "formik": "^2.4.9",
     "next": "16.0.7",
     "postcss": "^8.5.6",
