--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "16.0.7",
     "postcss": "^8.5.6",
     "react": "19.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
     "yup": "^1.7.1"
