--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
+    "@types/universal-cookie": "^2.2.0",
     "axios": "^1.13.2",
     "formik": "^2.4.9",
     "next": "16.0.7",
@@ -18,6 +19,7 @@
     "react-cookie": "^8.0.1",
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
+    "universal-cookie": "^8.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
