--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.11.0",
     "@types/universal-cookie": "^2.2.0",
     "axios": "^1.13.2",
