--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookie": "^8.0.1",
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "swr": "^2.3.7",
     "universal-cookie": "^8.0.1",
     "yup": "^1.7.1"
