--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.4",
     "swr": "^2.3.7",
     "universal-cookie": "^8.0.1",
     "yup": "^1.7.1"
